raw: update 1.20.6 DAY 10
Took 3 hours 39 minutes