@@ -30,8 +30,8 @@ public class PeachLanternDecorator extends TreeDecorator {
         int count = random.nextBetween(0, 2);
         if (count == 0) return;
 
-        int bottomY = generator.getLogPositions().get(0).getY();
-        // TODO: 19.06.2024 consider to optimize and combine with same method in BirchBranchesDecorator
+        int bottomY = generator.getLogPositions().getFirst().getY();
+        // TODO: 19.06.2024 consider optimizing and combining with same method in BirchBranchesDecorator
         List<LogSidePos> poses = generator.getLogPositions().stream()
                 .filter(pos -> pos.getY()-bottomY < 6)
                 .mapMulti((pos, consumer) -> {
